Add unittests for template generator angular
The following changes have been made.
 - Test cases for common components and individual resources.
 - Setup karma + jasmine test environment.
 - Setup eslint environment and rules.
 - Code style adjustment to satisfiy eslint rules.

Change-Id: Icb3e48be11beaebc4e410644c62e0df86b345207

--- a/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/js/resources/os__neutron__net/os__neutron__net.html
+++ b/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/js/resources/os__neutron__net/os__neutron__net.html
@@ -1,5 +1,5 @@
 <md-tabs md-dynamic-height md-stretch-tabs="always" md-border-bottom>
-    <md-tab label="Details" >
+    <md-tab label="Properties" >
         <md-content layout-padding>
             <md-input-container class="md-block" flex-gt-xs>
                 <label>Name</label>
