--- a/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/js/resources/os__neutron__securitygroup/os__neutron__securitygroup.html
+++ b/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/js/resources/os__neutron__securitygroup/os__neutron__securitygroup.html
@@ -1,5 +1,5 @@
 <md-tabs md-dynamic-height md-stretch-tabs="always" md-border-bottom>
-    <md-tab label="Details" >
+    <md-tab label="Properties" >
         <md-content layout-padding>
             <md-input-container class="md-block" flex-gt-xs>
                 <label>Name</label>
