--- a/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/js/resources/os__nova__server/os__nova__server.html
+++ b/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/js/resources/os__nova__server/os__nova__server.html
@@ -228,7 +228,7 @@
                         </md-input-container>
                         <md-input-container class="md-block" flex-gt-xs="45" ng-disabled="record.allocate_network.length > 0 ">
                             <label>Specify Property</label>
-                            <md-select ng-model="how2config_networks[$index]" ng-disabled="$ctrl.disable.networks[$index]">
+                            <md-select ng-model="how2config_networks[$index]" ng-change="update_nwconfig($index)" ng-disabled="$ctrl.disable.networks[$index]">
                                 <md-option value="network">network</md-option>
                                 <md-option value="subnet">subnet</md-option>
                                 <md-option value="port">port</md-option>
